--- a/css/style.css
+++ b/css/style.css
@@ -42,3 +42,11 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+body{
+	background-color: lightgray;
+}
+
+div{
+	border: 1px solid chocolate;
+}
