--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+	font-family: 'Roboto',sans-serif;
 }
 ol, ul {
 	list-style: none;
@@ -43,10 +44,63 @@ table {
 	border-spacing: 0;
 }
 
-body{
-	background-color: lightgray;
+
+
+
+/*Flow Elements*/
+
+.left{
+	float: left;
 }
 
-div{
-	border: 1px solid chocolate;
+.right{
+	float: right;
+}
+
+.clear{
+	clear: both;
+}
+
+/*Navigation Bar*/
+
+.active{
+	color: #4c5058 !important;
+	font-weight: 500;
+}
+
+nav{
+	width: 100%;
+	height: 4.375rem;
+	border-bottom: 1px solid #333333;
+	position: fixed;
+	top: 0px;
+}
+
+#logo{
+	margin-left: 2.4rem;
+}
+
+#logo img{
+	height: 4.375rem;
+	width: 26px;
+}
+
+#menu-item{
+	margin-top: 1.7rem;
+}
+
+#menu-item ul li{
+	display: inline-block;
+	font-size: 1.04rem;
+	margin-right: 1.85rem;
+}
+
+#menu-item ul li a{
+	color: #838994;
+	text-decoration: none;
+}
+
+#menu-item ul li a:hover{
+	color: #333333;
+	cursor: pointer;
 }
