--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+	box-sizing:border-box;
 }
 
 /* HTML5 display-role reset for older browsers */
@@ -27,6 +28,7 @@ footer, header, hgroup, menu, nav, section {
 body {
 	line-height: 1;
 	font-family: 'Roboto',sans-serif;
+	-webkit-font-smoothing: antialiased;
 }
 ol, ul {
 	list-style: none;
@@ -45,62 +47,71 @@ table {
 }
 
 
-
-
-/*Flow Elements*/
-
-.left{
-	float: left;
+.top-navigation{
+	background-color: #fff;
 }
 
-.right{
+.content{
+	width: 970px;
+	height: 70px;
+	margin: 0 auto;
+	padding: 0px 15px;
+}
+
+.top-navigation img{
+	width: 26px;
+	height: 70px;
+}
+
+.links{
+	font-size: 16px;
+	margin-top: 1.7rem;
 	float: right;
 }
 
-.clear{
-	clear: both;
-}
-
-/*Navigation Bar*/
-
-.active{
-	color: #4c5058 !important;
-	font-weight: 500;
-}
-
-nav{
-	width: 100%;
-	height: 4.375rem;
-	border-bottom: 1px solid #333333;
-	position: fixed;
-	top: 0px;
-}
-
-#logo{
-	margin-left: 2.4rem;
-}
-
-#logo img{
-	height: 4.375rem;
-	width: 26px;
-}
-
-#menu-item{
-	margin-top: 1.7rem;
-}
-
-#menu-item ul li{
+.links li{
 	display: inline-block;
-	font-size: 1.04rem;
-	margin-right: 1.85rem;
+	margin-right: 1.758em;
 }
 
-#menu-item ul li a{
-	color: #838994;
+.links li a.active{
+	color: #4c5058 !important;
+    font-weight: bold;
+}
+
+.links a{
 	text-decoration: none;
+	transition: color 0.5s ease;
+	color: #838994;
 }
 
-#menu-item ul li a:hover{
-	color: #333333;
+.links a:hover{
 	cursor: pointer;
+	color: #333333;
+}
+
+
+
+.introduction div img{
+	width: 100%;
+	z-index: 10;
+}
+
+.introduction-div h1{
+	color: #fff;
+	font-weight: 300;
+	font-size: 3.125rem;
+}
+
+.introduction-div h3{
+	color: #fff;
+	font-weight: 300;
+	font-size: 1.563rem;
+}
+
+#main-div{
+	text-align: center;
+	position: absolute;
+	top: 17.5rem;
+	z-index: 20;
 }
