--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ table {
 	background-size: cover;
 	background-position: center bottom;
 	background-repeat: no-repeat;
-	height: 580px;
+	height: 650px;
 	z-index: 10;
 	overflow: auto;
 }
@@ -147,8 +147,9 @@ table {
 }
 
 .cases{
-	padding-bottom: 5rem;
+	padding-bottom: 9rem;
 	padding-top: 9rem;
+	border-bottom: 1px solid gray;
 }
 
 .cases .content h2{
@@ -158,6 +159,7 @@ table {
 }
 
 .cases .device{
+	margin-top: 10px;
 	width: 33.3333333%;
 	display: inline-block;
 	box-sizing:border-box;
@@ -177,4 +179,51 @@ table {
 	font-size: 1.563rem;
 	margin: 2.5rem 0px 1.875rem;
 	text-align: center;
+}
+
+footer{
+	padding-top: 40px;
+	text-align: center;
+	padding-bottom: 150px;
+}
+
+footer p{
+	margin-bottom: 20px;
+}
+
+footer ul{
+	margin-bottom: 20px;
+}
+
+footer ul li{
+	width: 2.5rem;
+	height: 2.5rem;
+	display: inline-block;
+	border: 1px solid #eaebec;
+	border-radius: 100%;
+	text-align: center;
+}
+
+footer ul li i{
+	margin-top: 12px;
+}
+
+footer ul li:hover{
+	cursor: pointer;
+}
+
+.twitter{
+	color: #55acee;
+}
+
+.facebook{
+	color: #4c66a4;
+}
+.instagram{
+	color: #3f729b;
+}
+.copy{
+	font-size: 0.9rem;
+	font-weight: 300;
+	color: #838994;
 }
